Updated secrets layout

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -3,6 +3,6 @@ development:
   connect:
     key: ""
   starter_pack:
-    zuora_login: matthew.ingle@zuora.com
-    zuora_password: Connect555!
+    zuora_login:
+    zuora_password:
     zuora_url: https://apisandbox.zuora.com/apps/services/a/68.0
