--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,8 +1,18 @@
+common: &common
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
 development:
-  secret_key_base: 
+  <<: *common
+  secret_key_base: "xyz"
   connect:
     key: ""
   starter_pack:
     zuora_login:
     zuora_password:
     zuora_url: https://apisandbox.zuora.com/apps/services/a/81.0
+test:
+  <<: *common
+staging:
+  <<: *common
+production:
+  <<: *common
